app/src/main/resources/templates/quiz-template/css/style.css
/* ... */
.mr-auto,
.mx-auto {
    margin: 0 auto;
}

.search_icon {
    width: auto;
    float: right;
    text-align: right;
}

.search_icon ul {
    margin: 0px;
    padding: 0px;
}

.search_icon li {
    float: left;
    padding-left: 20px;
    font-size: 18px;
    color: #000;
}

.search_icon li a {
    color: #000;
}

.search_icon li a:hover {
    color: #e47250;
}

.navbar-expand-lg .navbar-nav .nav-link {
    padding-right: 20px;
    padding-left: 20px;
}

.nav-item {
    position: relative;
}

.navbar-nav.mr-auto ul {
    margin: 0px;
    padding: 0px;
}

.mb-lg-0,
.my-lg-0 {
    margin-bottom: 0 !important;
}

.banner_section {
    width: 100%;
    float: left;
    padding: 90px 0px;
}

.icon_1 {
    float: centre;
    width: 90px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    height: 80px;
}

.furniture_text {
    width: 100%;
    float: left;
    font-size: 100px;
    color: #52c472;
    text-align: center;
    text-transform: uppercase;
}

.there_text {
    width: 50%;
    margin: 0 auto;
    font-size: 16px;
    color: #356ea7;
    text-align: center;
}

.contact_bt_main {
    width: 17%;
    margin: 0 auto;
    text-align: center;
}

.contact_bt {
    width: 100%;
    float: left;
    margin-top: 360px;
}

.contact_bt a {
    width: 100%;
    float: left;
    font-size: 18px;
    color: #ffffff;
    background-color: #e47250;
    ;
    text-align: center;
    padding: 10px 0px;
    border-radius: 5px;
    text-transform: uppercase;
}

.contact_bt a:hover {
    color: #ffffff;
    background-color: #000;
}

.fa-angle-right:before {
    content: "\f105";
}

.fa-angle-left:before {
    content: "\f105";
}

#costum_slider a.carousel-control-prev {
    position: absolute;
    left: -153px;
    top: 57%;
    background-color: #000;
    color: #ffffff;
    border-radius: 100px;
}

#costum_slider a.carousel-control-next {
    position: absolute;
    right: -150px;
    top: 57%;
}

#costum_slider .carousel-control-prev,
#costum_slider .carousel-control-next {
    width: 85px;
    height: 85px;
    background: #000;
    opacity: 1;
    font-size: 30px;
    color: #fff;
    border-radius: 100px;
}

#costum_slider .carousel-control-prev:hover,
#costum_slider .carousel-control-next:hover,
#costum_slider .carousel-control-prev:focus,
#costum_slider .carousel-control-next:focus {
    background: #f8ca12;
    color: #fff;
}

.services_section {
    width: 100%;
    float: left;
    padding-bottom: 90px;
}

.services_taital {
    width: 100%;
    float: left;
    font-size: 36px;
    color: #090808;
    text-align: center;
    text-transform: uppercase;
}

.many_taital {
    width: 100%;
    float: left;
    font-size: 16px;
    color: #090808;
    text-align: center;
    margin-left: 0px;
    margin-top: 10px;
}

.services_section2 {
    width: 100%;
    float: left;
}

.furnitures_text {
    width: 100%;
    float: left;
    font-size: 24px;
    color: #090808;
    text-transform: uppercase;
    text-align: center;
    padding-top: 20px;
}

.dummy_text {
    width: 100%;
    float: left;
    font-size: 16px;
    color: #090808;
    text-align: center;
    margin-left: 0px;
    margin-top: 10px;
}

.read_bt_main {
    width: 60%;
    margin: 0 auto;
    text-align: center;
}

.read_bt {
    width: 100%;
    float: left;
    margin-top: 10px;
}

.read_bt a {
    width: 100%;
    float: left;
    font-size: 18px;
    color: #ffffff;
    background-color: #e47250;
    text-align: center;
    padding: 10px 0px;
    border-radius: 5px;
    text-transform: uppercase;
}

.read_bt a:hover {
    color: #ffffff;
    background-color: #000;
}

.about_section {
    width: 100%;
    float: left;
    background-color: #e47250;
    ;
    height: auto;
    padding-bottom: 90px;
}

.quiz_section {
    width: 100%;
    float: left;
    background-color: #7c7972d6;
    height: auto;
    padding-bottom: 90px;
}

.image_1 {
    width: 100%;
    float: left;
}

.about_text {
    width: 100%;
    float: left;
    font-size: 40px;
    color: #ffffff;
    text-transform: uppercase;
    font-weight: 500;
}

.lorem_text {
    width: 100%;
    float: left;
    font-size: 16px;
    color: #ffffff;
    margin-left: 0px;
    padding-top: 40px;
}

.read_bt1 {
    width: 30%;
    float: left;
    margin-top: 70px;
}

.read_bt1 a {
    width: 100%;
    float: left;
    font-size: 18px;
    color: #ffffff;
    background-color: #070201;
    text-align: center;
    padding: 10px 0px;
    border-radius: 5px;
    text-transform: uppercase;
}

.read_bt1 a:hover {
    color: #000;
    background-color: #ffffff;
}

.furnitures_section {
    width: 100%;
    float: left;
    padding-bottom: 90px;
}

.our_text {
    width: 100%;
    float: left;
    font-size: 36px;
    color: #121111;
    text-transform: uppercase;
    text-align: center;
}

.ipsum_text {
    width: 100%;
    float: left;
    font-size: 16px;
    color: #090808;
    text-align: center;
    margin-left: 0px;
    margin-top: 10px;
}

.furnitures_section2 {
    width: 100%;
    float: left;
}

.container_main {
    position: relative;
    width: 100%;
    max-width: 100%;
}

a:hover {
    color: #fff;
    text-decoration: underline;
}

.image {
    display: block;
    width: 100%;
    height: auto;
}

.overlay {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: 22%;
    width: 15%;
    opacity: 0;
    transition: .3s ease;
    background-color: #fabc26;
    margin: 0 auto;
    border-radius: 100px;
    top: 130px;
}

.container_main:hover .overlay {
    opacity: 1;
}

.icon {
    color: white;
    font-size: 30px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    text-align: center;
}

.fa-user:hover {
    color: #eee;
}

.temper_text {
    width: 100%;
    float: left;
    font-size: 18px;
    color: #fabb25;
    text-transform: uppercase;
    font-weight: bold;
    padding-top: 35px;
}
/* ... */

